--- a/src/stylesheets/_structure.scss
+++ b/src/stylesheets/_structure.scss
@@ -1,5 +1,11 @@
 .ng-datetime {
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
+  position: absolute;
+  box-sizing: border-box;
+  left: 200px;
+  top: 100px;
+  width: 232px;
+  padding: 10px;
+  border: 1px solid rgba(0, 0, 0, 0.25);
 
   .ng-datetime-date {
     .ng-datetime-navigation {
