--- a/src/stylesheets/_structure.scss
+++ b/src/stylesheets/_structure.scss
@@ -5,7 +5,9 @@
   top: 100px;
   width: 232px;
   padding: 10px;
+  z-index: 10000;
   border: 1px solid rgba(0, 0, 0, 0.25);
+  background-color: #ffffff;
 
   .ng-datetime-date {
     .ng-datetime-navigation {
